(feat) fix error dark mode for footer component

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -31,11 +31,11 @@
   }
 
   .dark {
-    --background: 240 10% 3.9%;
+    --background: 0,0%,11.4%;
     --foreground: 0 0% 98%;
-    --card: 240 10% 3.9%;
+    --card: 0,0%,11.4%;
     --card-foreground: 0 0% 98%;
-    --popover: 240 10% 3.9%;
+    --popover: 0,0%,11.4%;
     --popover-foreground: 0 0% 98%;
     --primary: 24.6,95%,53.1%;
     --primary-foreground: 355.7 100% 99%;
